ios and android cards don't have correct spacing between them on mobile, but pc does. Stapled a fix; trying something new for touch screen copy button

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -66,6 +66,10 @@ body {
     margin-top: 12px;
   }
 
+  .spacer-bottom {
+      margin-bottom: 50px;
+  }
+
   @media only screen and (min-width: 576px) {
 	.step {
         max-height: 530px;
